fix timezone bug, redundant deletion, and mutable collect in StudySessionService
Use LocalDate.now(ZoneOffset.UTC) for consistent day boundary calculation
regardless of server timezone. Remove deleteBySourceId which could delete
today's session, relying on deleteOlderThan(startOfDay) for cleanup.
Replace collect(Collectors.toList()) with .toList() for immutable list.

https://claude.ai/code/session_01FcgwmzJ1QPQRPKtbnnXyW9